--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -251,3 +251,23 @@ header{
 .login input[type="submit"]:hover {
     background-color: #6A0DAD;
 }
+
+ventana{
+    display: none; 
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%;
+    background-color: rgba(255, 165, 0, 0.5); 
+    z-index: 9999;
+}
+
+ventana1{
+    position: absolute; 
+    top: 50%; left: 50%; 
+    transform: translate(-50%, -50%); 
+    background-color: #fff; 
+    padding: 20px; 
+    border-radius: 10px;
+}
