--- a/src/main/resources/templates/auto/modifica.html
+++ b/src/main/resources/templates/auto/modifica.html
@@ -7,6 +7,94 @@
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
         <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+        <style>
+            body {
+                font-family: 'Arial', sans-serif;
+                background-color: #FFA500;
+                color: #000;
+            }
+
+            div {
+                max-width: 800px;
+                margin: 0 auto;
+                padding: 20px;
+                background-color: #FFD700;
+                border-radius: 5px;
+                box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+            }
+
+            h1 {
+                font-family: 'Bebas Neue', sans-serif;
+                font-size: 32px;
+                margin-bottom: 10px;
+                text-align: center;
+            }
+
+            p {
+                font-size: 18px;
+                margin-bottom: 10px;
+                text-align: center;
+            }
+
+            table {
+                width: 100%;
+                border-collapse: collapse;
+                margin-top: 20px;
+                background-color: #fff;
+                box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+            }
+
+            th, td {
+                padding: 12px;
+                text-align: left;
+                border-bottom: 1px solid #ccc;
+            }
+
+            th {
+                background-color: #f2f2f2;
+            }
+
+            a {
+                color: #007bff;
+                text-decoration: none;
+            }
+
+            a:hover {
+                text-decoration: underline;
+            }
+
+            img {
+                border: 1px solid #ccc;
+                border-radius: 5px;
+                max-width: 10000px;
+            }
+
+            div a {
+                display: inline-block;
+                margin-right: 10px;
+                color: #007bff;
+                text-decoration: none;
+            }
+
+            div a[href="/accesorio/nuevo"] {
+                display: inline-block;
+                margin-top: 20px;
+                padding: 10px 20px;
+                background-color: #007bff;
+                color: #fff;
+                text-align: center;
+                text-decoration: none;
+                border-radius: 5px;
+            }
+
+            div a[href="/accesorio/nuevo"]:hover {
+                background-color: #0056b3;
+            }
+
+            footer{
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
         <div class="catalogo" id="catalogo">
