--- a/src/main/resources/templates/usuario/listado.html
+++ b/src/main/resources/templates/usuario/listado.html
@@ -97,30 +97,33 @@
         </style>
     </head>
     <body>
-        <h1>Modificar Accesorio</h1>
-        <form th:object="${accesorio}" th:action="@{/accesorio/guardar}" method="post" enctype="multipart/form-data">
-            <input type="hidden" th:field="*{idAccesorio}">
-            <p>
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" th:field="*{nombre}">
-            </p>
-            <p>
-                <label for="imagen">Imagen:</label>
-                <input type="file" id="imagen" name="imagenFile">
-            </p>
-            <p>
-                <label for="precio">Precio:</label>
-                <input type="number" id="precio" th:field="*{precio}">
-            </p>
-            <p>
-                <label for="activo">Activo:</label>
-                <input type="checkbox" id="activo" th:field="*{activo}">
-            </p>
-            <p>
-                <button type="submit">Guardar</button>
-                <a href="/accesorio/listado">Cancelar</a>
-            </p>
-        </form>
-    </body>
-    <footer class="footer">CarShop &COPY; 2023 - Grupo 10</footer>
+        <div class="catalogo">
+        <h1>Listado de Usuarios</h1>
+        <p>Total de usuarios: <span th:text="${totalUsuarios}"></span></p>
+
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Username</th>
+                <th>Correo</th>
+                <th>Acciones</th>
+            </tr>
+            <tr th:each="usuario : ${usuarios}">
+                <td th:text="${usuario.idUsuario}"></td>
+                <td th:text="${usuario.username}"></td>
+                <td th:text="${usuario.correo}"></td>
+                <td>
+                    <a th:href="@{/usuario/modificar/{idUsuario}(idUsuario=${usuario.idUsuario})}">Modificar</a>
+                    <a th:href="@{/usuario/eliminar/{idUsuario}(idUsuario=${usuario.idUsuario})}">Eliminar</a>
+                </td>
+            </tr>
+        </table>
+
+        <a href="/usuario/nuevo">Agregar Nuevo Usuario</a>
+    </div>
+    <div>
+        <a href="/index.html">Volver al Inicio</a>
+    </div>
+</body>
+<footer class="footer">CarShop &COPY; 2023 - Grupo 10</footer>
 </html>
