--- a/src/main/resources/templates/usuario/modifica.html
+++ b/src/main/resources/templates/usuario/modifica.html
@@ -97,24 +97,20 @@
         </style>
     </head>
     <body>
-        <h1>Modificar Accesorio</h1>
-        <form th:object="${accesorio}" th:action="@{/accesorio/guardar}" method="post" enctype="multipart/form-data">
-            <input type="hidden" th:field="*{idAccesorio}">
+        <h1>Modificar Usuario</h1>
+        <form th:object="${usuario}" th:action="@{/usuario/guardar}" method="post" enctype="multipart/form-data">
+            <input type="hidden" th:field="*{idUsuario}">
             <p>
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" th:field="*{nombre}">
+                <label for="username">Username</label>
+                <input type="text" id="username" th:field="*{username}">
             </p>
             <p>
-                <label for="imagen">Imagen:</label>
-                <input type="file" id="imagen" name="imagenFile">
+                <label for="correo">Correo:</label>
+                <input type="text" id="correo" th:field="*{correo}">
             </p>
             <p>
-                <label for="precio">Precio:</label>
-                <input type="number" id="precio" th:field="*{precio}">
-            </p>
-            <p>
-                <label for="activo">Activo:</label>
-                <input type="checkbox" id="activo" th:field="*{activo}">
+                <label for="pass">Contraseña:</label>
+                <input type="text" id="pass" th:field="*{password}">
             </p>
             <p>
                 <button type="submit">Guardar</button>
